# RoP_biomedical

./: .gitignore  LICENSE-COMMERCIAL-USE.txt  README.md  pyproject.toml
data/anchors/: 01_identity.json  02_time.json  03_sex.json  04_ancestry_pedigree.json  05_biosample.json  05b_anatomy_celltype.json  06_omics.json  07_imaging_acquisition.json  08_clinical_instruments.json  09_governance.json  10_data_assets.json  11_summary_stats.json  12_clinical_concepts.json  13a_resources.json  13b_collections.json
docs/: ANCHORS.md  DISTRIBUTION.md  GOVERNANCE.md  HARMONIZATION_ISSUES.md  NONSTANDARD_CONCEPTS.md  PROJECT_PLAN.md  ROADMAP.md  SETUP.md  SPEC.md  SPRINT_1.md
migrations/: 001_rop_extension.sql
rop/: __init__.py  anchors.py  bundle.py  cli.py  embed.py  equivalence.py  schema.py  validate.py
rop/ingest/: __init__.py  _common.py  athena.py  bids.py  cdisc.py  dicom.py  duo.py  hpo.py  loinc.py  mondo.py  ninds_cde.py  phenx.py
scripts/: build_faiss_index.py  create_rop_summary_figure.py  embed_boutique_incremental.py  embedding_watchdog.sh  enrich_athena_loinc_six_axis.py  generate_embeddings.py  generate_embeddings_direct.py  ingest_boutique_cdes.py  merge_boutique_with_foundation.py  package_bundle.py  package_final_bundle.py  security_screen.py  sprint1_dedup_pass1.py  sprint1_download_all.py
secondary_docs/: BLOG_POST.md  CLAUDE.md  CONTRIBUTING.md  LINKEDIN_POST.md  WEEKEND_ACCOMPLISHMENTS.md  WEEKEND_BUILD_SUMMARY.md
tests/: test_equivalence.py  test_ingest.py  test_security.py  test_validate.py
