[project]
name = "rop"
version = "0.1.0"
description = "RoP — Biomedical Reference of Parameters: a portable interoperability contract"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Dan Vitale" },
    { name = "Pietro Marini" },
    { name = "Michael A. Nalls" }
]
maintainers = [
    { name = "DataTecnica", email = "info@datatecnica.com" }
]
keywords = ["biomedical", "interoperability", "CDE", "harmonization", "FAIR", "ontology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pydantic>=2.5",
    "polars>=0.20",
    "duckdb>=0.10",
    "pyarrow>=15.0",
    "click>=8.1",
    "sentence-transformers>=2.5",
    "faiss-cpu>=1.7",
    "numpy>=1.26",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "black>=24.0",
    "mypy>=1.8",
]
ingest = [
    "pydicom>=2.4",
    "pyyaml>=6.0",
    "requests>=2.31",
]
all = [
    "rop[dev,ingest]",
]

[project.scripts]
rop = "rop.cli:main"

[project.urls]
Homepage = "https://github.com/datatecnica/rop"
Documentation = "https://github.com/datatecnica/rop/blob/main/docs/SPEC.md"
Issues = "https://github.com/datatecnica/rop/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rop*"]

[tool.setuptools.package-data]
rop = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
